kosmetyka .gitignore przy z6

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@
 /zjazd6_05_12_2020_pd/*
 # except for pd-z6/
 !/zjazd6_05_12_2020_pd/pd-z6
+!/zjazd6_05_12_2020_pd/tasks.md
 # ignore all in the subfolder pd-z6/
 /zjazd6_05_12_2020_pd/pd-z6/*
 # except for the subfolder src/
