zadanie zaliczniowe (sem1) -> commit 1

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 
 #################################
 ### settings for ###
-### for zjazd5_26_11_2020_pd/ ###
+### zjazd5_26_11_2020_pd/ ###
 #################################
 # except for the folder
 !/zjazd5_26_11_2020_pd/
@@ -18,7 +18,7 @@
 
 #################################
 ### settings for ###
-### for zjazd6_05_12_2020_pd/ ###
+### zjazd6_05_12_2020_pd/ ###
 #################################
 # except for the folder
 !/zjazd6_05_12_2020_pd/
@@ -38,4 +38,13 @@
 # except for the main html and css files
 !/zjazd6_05_12_2020_pd/pd-z6/src/index.html
 !/zjazd6_05_12_2020_pd/pd-z6/src/styles.css
+#################################
+
+
+#################################
+### settings for ###
+### /zad_zal_sem1_10_01_2021  ###
+#################################
+# except for the folder
+!/zad_zal_sem1_10_01_2021/
 #################################
