--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,24 @@
 #################################
 # except for the folder
 !/zad_zal_sem1_10_01_2021/
+# ignore all in that folder
+/zad_zal_sem1_10_01_2021/*
+# except for tetris/
+!/zad_zal_sem1_10_01_2021/tetris
+!/zad_zal_sem1_10_01_2021/README.md
+# ignore all in the subfolder tetris/
+/zad_zal_sem1_10_01_2021/tetris/*
+# except for the package.json and package-lock.json
+!/zad_zal_sem1_10_01_2021/tetris/package.json
+!/zad_zal_sem1_10_01_2021/tetris/package-lock.json
+# except for the subfolder src/
+!/zad_zal_sem1_10_01_2021/tetris/src/
+# ignore all in the src/
+/zad_zal_sem1_10_01_2021/tetris/src/*
+# except /app
+!/zad_zal_sem1_10_01_2021/tetris/src/app/
+# except for the main html and css files
+!/zad_zal_sem1_10_01_2021/tetris/src/index.html
+!/zad_zal_sem1_10_01_2021/tetris/src/styles.css
+
 #################################
